# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/nacl/config.gni")
import("//build/config/ui.gni")

group("examples") {
  testonly = true

  deps = [
    "//examples/audio_play_test",
    "//examples/media_test",
  ]
}
