# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/module_args/mojo.gni")
import("//mojo/public/mojo_application.gni")
import("$mojo_sdk_root/mojo/public/mojo_sdk.gni")

source_set("common") {
  sources = [
    "media_pipe_base.cc",
    "media_pipe_base.h",
    "rate_control_base.cc",
  ]

  deps = [
    "//base",
    "//mojo/services/media/common/cpp",
    "//mojo/services/media/common/interfaces",
  ]
}

mojo_native_application("apptests") {
  output_name = "media_common_apptests"

  testonly = true

  sources = [
    "test/test_base.h",
    "test/timeline_function_test.cc",
    "test/timeline_rate_test.cc",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/application:test_support",
    "//mojo/services/media/common/cpp",
  ]
}
