# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../mojo_sdk.gni")

mojo_sdk_source_set("bindings") {
  sources = [
    "message.h",
    "struct.h",

    # Implementation details.
    "lib/message.c",
    "lib/struct.c",
  ]
}
